Finished slider for blowsing animation frames Added icons for camera rotation modes.

--- a/mandelbulber2/qt/dock_animation.ui
+++ b/mandelbulber2/qt/dock_animation.ui
@@ -224,8 +224,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>477</width>
-              <height>407</height>
+              <width>294</width>
+              <height>318</height>
              </rect>
             </property>
             <layout class="QVBoxLayout" name="verticalLayout_79">
@@ -1451,6 +1451,28 @@ keyframes</string>
             <number>2</number>
            </property>
            <item>
+            <widget class="QToolButton" name="toolButton_previousFrame">
+             <property name="text">
+              <string>...</string>
+             </property>
+             <property name="icon">
+              <iconset theme="arrow-left" resource="icons.qrc">
+               <normaloff>:/navigation/icons/go-previous.png</normaloff>:/navigation/icons/go-previous.png</iconset>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QToolButton" name="toolButton_next_frame">
+             <property name="text">
+              <string>...</string>
+             </property>
+             <property name="icon">
+              <iconset theme="arrow-right" resource="icons.qrc">
+               <normaloff>:/navigation/icons/go-next.png</normaloff>:/navigation/icons/go-next.png</iconset>
+             </property>
+            </widget>
+           </item>
+           <item>
             <widget class="QLabel" name="label_actualFrame">
              <property name="text">
               <string>0</string>
@@ -1461,28 +1483,6 @@ keyframes</string>
             <widget class="QSlider" name="horizontalSlider_actualFrame">
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QToolButton" name="toolButton_previousFrame">
-             <property name="text">
-              <string>...</string>
-             </property>
-             <property name="icon">
-              <iconset theme="arrow-left">
-               <normaloff>.</normaloff>.</iconset>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QToolButton" name="toolButton_next_frame">
-             <property name="text">
-              <string>...</string>
-             </property>
-             <property name="icon">
-              <iconset theme="arrow-right">
-               <normaloff>.</normaloff>.</iconset>
              </property>
             </widget>
            </item>
@@ -1511,9 +1511,9 @@ keyframes</string>
  </widget>
  <customwidgets>
   <customwidget>
-   <class>MySpinBox</class>
-   <extends>QSpinBox</extends>
-   <header>my_spin_box.h</header>
+   <class>MyComboBox</class>
+   <extends>QComboBox</extends>
+   <header>my_combo_box.h</header>
   </customwidget>
   <customwidget>
    <class>MyCheckBox</class>
@@ -1526,14 +1526,14 @@ keyframes</string>
    <header>my_line_edit.h</header>
   </customwidget>
   <customwidget>
-   <class>MyComboBox</class>
-   <extends>QComboBox</extends>
-   <header>my_combo_box.h</header>
-  </customwidget>
-  <customwidget>
    <class>MyDoubleSpinBox</class>
    <extends>QDoubleSpinBox</extends>
    <header>my_double_spin_box.h</header>
+  </customwidget>
+  <customwidget>
+   <class>MySpinBox</class>
+   <extends>QSpinBox</extends>
+   <header>my_spin_box.h</header>
   </customwidget>
   <customwidget>
    <class>MyTableWidgetAnim</class>
