--- a/mandelbulber2/qt/icons.qrc
+++ b/mandelbulber2/qt/icons.qrc
@@ -154,6 +154,7 @@
     <file>icons/water.png</file>
   </qresource>
   <qresource prefix="/navigation">
+    <file>icons/precise.svg</file>
     <file>icons/auto.svg</file>
     <file>icons/rot.svg</file>
     <file>icons/roll.svg</file>
