--- a/mandelbulber2/qt/dock_effects.ui
+++ b/mandelbulber2/qt/dock_effects.ui
@@ -96,7 +96,7 @@
       <enum>QTabWidget::West</enum>
      </property>
      <property name="currentIndex">
-      <number>3</number>
+      <number>0</number>
      </property>
      <property name="usesScrollButtons">
       <bool>true</bool>
@@ -1309,8 +1309,8 @@ To do mapping of radiance use HDRI texture as a background texture.</string>
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>553</width>
-            <height>1698</height>
+            <width>269</width>
+            <height>1713</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_35">
@@ -2858,8 +2858,8 @@ Set 100 to keep compatibility with version &lt;=2.12</string>
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>571</width>
-            <height>1078</height>
+            <width>273</width>
+            <height>409</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_36">
@@ -3575,7 +3575,7 @@ Set 100 to keep compatibility with version &lt;=2.12</string>
           <property name="geometry">
            <rect>
             <x>0</x>
-            <y>-88</y>
+            <y>0</y>
             <width>553</width>
             <height>1188</height>
            </rect>
@@ -4567,7 +4567,7 @@ of lights:</string>
                    </sizepolicy>
                   </property>
                   <property name="text">
-                   <string>Orbit rap center relative to the origin</string>
+                   <string>Orbit trap center relative to the origin</string>
                   </property>
                  </widget>
                 </item>
@@ -4664,8 +4664,8 @@ of lights:</string>
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>571</width>
-            <height>1070</height>
+            <width>230</width>
+            <height>215</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_3">
