--- a/mandelbulber2/formula/ui/pseudo_kleinian.ui
+++ b/mandelbulber2/formula/ui/pseudo_kleinian.ui
@@ -1779,6 +1779,13 @@ offset</string>
        <number>2</number>
       </property>
       <item>
+       <widget class="MyCheckBox" name="checkBox_fold_color_aux_color_enabledA_false">
+        <property name="text">
+         <string notr="true">k</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <layout class="QHBoxLayout" name="horizontalLayout_21" stretch="0,1,0,1">
         <item>
          <widget class="QLabel" name="label_102">
